Changes to be committed: deleted:    .editorconfig new file:   .env.example modified:   .gitignore deleted:    .vscode/extensions.json deleted:    .vscode/launch.json new file:   .vscode/settings.json deleted:    .vscode/tasks.json modified:   README.md modified:   angular.json modified:   package-lock.json modified:   package.json modified:   server.ts modified:   src/app/app.component.html modified:   src/app/app.component.ts modified:   src/app/app.config.server.ts modified:   src/app/app.config.ts modified:   src/app/app.routes.ts new file:   src/app/home/home.component.html renamed:    src/app/app.component.scss -> src/app/home/home.component.scss new file:   src/app/home/home.component.spec.ts new file:   src/app/home/home.component.ts new file:   src/app/http.interceptor.spec.ts new file:   src/app/http.interceptor.ts new file:   src/app/token.service.spec.ts new file:   src/app/token.service.ts new file:   src/express.token.ts modified:   src/index.html modified:   src/main.server.ts modified:   src/main.ts modified:   src/styles.scss new file:   tls/.gitkeep modified:   tsconfig.app.json modified:   tsconfig.json new file:   tsconfig.server.json modified:   tsconfig.spec.json

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@
 
 # Node
 /node_modules
-npm-debug.log
-yarn-error.log
+**/*.log
 
 # IDEs and editors
 .idea/
@@ -22,14 +21,14 @@ yarn-error.log
 
 # Visual Studio Code
 .vscode/*
+.history/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
 
 # Miscellaneous
-/.angular/cache
+.angular
 .sass-cache/
 /connect.lock
 /coverage
@@ -40,3 +39,14 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# env
+.env*
+!.env.example
+
+# TLS/SSL
+tls/*.pem
+tls/*.crt
+
+# Note
+note.txt
