--- a/package.json
+++ b/package.json
@@ -1,44 +1,56 @@
 {
-  "name": "hello",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:hello": "node dist/hello/server/server.mjs"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/platform-server": "^17.3.0",
-    "@angular/router": "^17.3.0",
-    "@angular/ssr": "^17.3.8",
-    "express": "^4.18.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
-  }
+	"name": "hello",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "node_modules/.bin/ng",
+		"start": "node_modules/.bin/ng serve",
+		"build": "rm -rf dist && node_modules/.bin/ng build && ng run hello:server && npm run minify",
+		"watch": "node_modules/.bin/ng build --watch --configuration development",
+		"test": "node_modules/.bin/ng test",
+		"serve": "node --gc-interval=100 -r dotenv/config dist/hello/server/main.js",
+		"dev": "npm run build && npm run serve",
+		"minify": "html-minifier --collapse-whitespace --remove-comments --remove-script-type-attributes --remove-tag-whitespace --minify-css true --minify-js true dist/hello/browser/index.html -o dist/hello/browser/index.html"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^17.3.0",
+		"@angular/common": "^17.3.0",
+		"@angular/compiler": "^17.3.0",
+		"@angular/core": "^17.3.0",
+		"@angular/forms": "^17.3.0",
+		"@angular/platform-browser": "^17.3.0",
+		"@angular/platform-browser-dynamic": "^17.3.0",
+		"@angular/platform-server": "^17.3.0",
+		"@angular/router": "^17.3.0",
+		"@angular/ssr": "^17.3.8",
+		"body-parser": "^1.20.2",
+		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"csrf-csrf": "^3.0.6",
+		"dotenv": "^16.4.5",
+		"express": "^4.18.2",
+		"rxjs": "~7.8.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.14.3"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^17.3.8",
+		"@angular/cli": "^17.3.8",
+		"@angular/compiler-cli": "^17.3.0",
+		"@types/body-parser": "^1.19.5",
+		"@types/compression": "^1.7.5",
+		"@types/cookie-parser": "^1.4.7",
+		"@types/express": "^4.17.17",
+		"@types/jasmine": "~5.1.0",
+		"@types/node": "^18.18.0",
+		"browser-sync": "^3.0.2",
+		"jasmine-core": "~5.1.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.2.0",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"typescript": "~5.4.2"
+	}
 }
