--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 SERVE_PROTOCOL="http"
 NODE_ENV="development"
 PORT=4200
-TZ="Asia/Jakarta"
+TZ="UTC"
 
-COOKIE_PARSER_SECRET=
-COOKIE_MAX_AGE=10800000 # 3h
-COOKIE_SECRET=
-COOKIE_NAME=
+COOKIE_PARSER_SECRET="SECRET_1"
+COOKIE_SECRET="SECRET_2"
+# Visit https://github.com/Psifi-Solutions/csrf-csrf?tab=readme-ov-file#cookiename
+COOKIE_NAME="__Host-psifi.x-csrf-token"
