--- a/package.json
+++ b/package.json
@@ -4,53 +4,55 @@
 	"scripts": {
 		"ng": "node_modules/.bin/ng",
 		"start": "node_modules/.bin/ng serve",
-		"build": "rm -rf dist && node_modules/.bin/ng build && ng run hello:server && npm run minify",
+		"build": "rm -rf dist && node_modules/.bin/ng build && ng run hello:server",
 		"watch": "node_modules/.bin/ng build --watch --configuration development",
 		"test": "node_modules/.bin/ng test",
-		"serve": "node --gc-interval=100 -r dotenv/config dist/hello/server/main.js",
-		"dev": "npm run build && npm run serve",
-		"minify": "html-minifier --collapse-whitespace --remove-comments --remove-script-type-attributes --remove-tag-whitespace --minify-css true --minify-js true dist/hello/browser/index.html -o dist/hello/browser/index.html"
+		"serve": "node -r dotenv/config dist/hello/server/main.js",
+		"dev": "node_modules/.bin/nodemon -w src/ -e html,scss,ts -i 'src/**/*.spec.ts' -x 'npm run build && npm run serve'"
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^17.3.0",
-		"@angular/common": "^17.3.0",
-		"@angular/compiler": "^17.3.0",
-		"@angular/core": "^17.3.0",
-		"@angular/forms": "^17.3.0",
-		"@angular/platform-browser": "^17.3.0",
-		"@angular/platform-browser-dynamic": "^17.3.0",
-		"@angular/platform-server": "^17.3.0",
-		"@angular/router": "^17.3.0",
-		"@angular/ssr": "^17.3.8",
-		"body-parser": "^1.20.2",
-		"compression": "^1.7.4",
-		"cookie-parser": "^1.4.6",
+		"@angular/animations": "^18.2.13",
+		"@angular/common": "^18.2.13",
+		"@angular/compiler": "^18.2.13",
+		"@angular/core": "^18.2.13",
+		"@angular/forms": "^18.2.13",
+		"@angular/platform-browser": "^18.2.13",
+		"@angular/platform-browser-dynamic": "^18.2.13",
+		"@angular/platform-server": "^18.2.13",
+		"@angular/router": "^18.2.13",
+		"@angular/ssr": "^18.2.12",
+		"body-parser": "^1.20.3",
+		"compression": "^1.7.5",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
-		"csrf-csrf": "^3.0.6",
+		"csrf-csrf": "^3.1.0",
 		"dotenv": "^16.4.5",
-		"express": "^4.18.2",
+		"express": "^4.21.1",
+		"ngx-cookie-service": "^18.0.0",
+		"ngx-cookie-service-ssr": "^18.0.0",
 		"rxjs": "~7.8.0",
-		"tslib": "^2.3.0",
-		"zone.js": "~0.14.3"
+		"tslib": "^2.8.1",
+		"zone.js": "~0.14.10"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^17.3.8",
-		"@angular/cli": "^17.3.8",
-		"@angular/compiler-cli": "^17.3.0",
+		"@angular-devkit/build-angular": "^18.2.12",
+		"@angular/cli": "^18.2.12",
+		"@angular/compiler-cli": "^18.2.13",
 		"@types/body-parser": "^1.19.5",
 		"@types/compression": "^1.7.5",
-		"@types/cookie-parser": "^1.4.7",
+		"@types/cookie-parser": "^1.4.8",
 		"@types/express": "^4.17.17",
-		"@types/jasmine": "~5.1.0",
-		"@types/node": "^18.18.0",
+		"@types/jasmine": "^5.1.5",
+		"@types/node": "^18.19.67",
 		"browser-sync": "^3.0.2",
 		"jasmine-core": "~5.1.0",
-		"karma": "~6.4.0",
+		"karma": "~6.4.4",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
-		"typescript": "~5.4.2"
+		"nodemon": "^3.1.7",
+		"typescript": "~5.4.5"
 	}
 }
