--- a/angular.json
+++ b/angular.json
@@ -20,18 +20,10 @@
 						"outputPath": "dist/hello/browser",
 						"index": "src/index.html",
 						"main": "src/main.ts",
-						"polyfills": [
-							"zone.js"
-						],
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
-						"assets": [
-							"src/favicon.ico",
-							"src/assets"
-						],
-						"styles": [
-							"src/styles.scss"
-						],
+						"assets": ["src/favicon.ico", "src/assets"],
+						"styles": ["src/styles.scss"],
 						"extractLicenses": false
 					},
 					"configurations": {
@@ -82,19 +74,10 @@
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
-						"polyfills": [
-							"zone.js",
-							"zone.js/testing"
-						],
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
-						"assets": [
-							"src/favicon.ico",
-							"src/assets"
-						],
-						"styles": [
-							"src/styles.scss"
-						],
+						"assets": ["src/favicon.ico", "src/assets"],
+						"styles": ["src/styles.scss"],
 						"scripts": []
 					}
 				},
@@ -143,9 +126,7 @@
 				"prerender": {
 					"builder": "@angular-devkit/build-angular:prerender",
 					"options": {
-						"routes": [
-							"/"
-						]
+						"routes": ["/"]
 					},
 					"configurations": {
 						"production": {
